Summary of bias properties

--- a/notebooks/02.00-Handling-overscan,-trimming,-and-bias-subtraction.ipynb
+++ b/notebooks/02.00-Handling-overscan,-trimming,-and-bias-subtraction.ipynb
@@ -11,18 +11,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The bias in a CCD camera is a DC offset applied to all pixels so that when the voltage in each pixel is converted to a number the number will always be positive. In an ideal CCD the bias would be the same for every pixel and not change over time. In practice, the bias is slightly different for each pixel, and can vary by a count or two from night to night or during a night.\n",
-    "\n",
-    "A bias *image* is a picture taken with the shutter close and zero exposure time; think about it as a command to the camera to do whatever it usually does to prepare the camera's electronics to take an image and then immediately read out the CCD as though you had taken a picture.\n",
-    "\n",
-    "The discussion of bias assumes you have taken images with an overscan region. If your images do not have overscan, simply skip those steps."
+    "## Introduction"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The progression here is to \"calibrate\" the bias images by subtracting overscan (again, simply skip that if your images do not have overscan), trim the overscan from the bias images and combine all of the bias images to make a \"master\" bias. "
+    "The bias in a CCD camera is a DC offset applied to all pixels so that when the voltage in each pixel is converted to a number the number will always be positive. In an ideal CCD the bias would be the same for every pixel and not change over time. In practice, the bias is slightly different for each pixel, and can vary by a count or two from night to night or during a night.\n",
+    "\n",
+    "A bias *image* is a picture taken with the shutter close and zero exposure time; think about it as a command to the camera to do whatever it usually does to prepare the camera's electronics to take an image and then immediately read out the CCD as though you had taken a picture."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sample bias images\n",
+    "\n",
+    "The images below are a single bias frame and an average 100 bias frames from an [Andor Apogee Aspen CG16M](http://www.andor.com/pdfs/specifications/Apogee_Aspen_CG16M_Specifications.pdf), a low-end 4k × 4k CCD with a [Kodak KAF-16803 sensor chip](http://www.onsemi.com/pub/Collateral/KAF-16803-D.PDF). That model camera has a typical bias level around 1000 and read noise around 10 $e^-$, though the precise value varies from camera to camera and with temperature."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -33,8 +60,8 @@
    "source": [
     "from astropy.nddata import CCDData\n",
     "from astropy.visualization import hist\n",
-    "from ccdproc import subtract_overscan\n",
-    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import numpy as np\n",
     "\n",
     "from convenience_functions import show_image\n",
     "\n",
@@ -42,43 +69,52 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## A sample bias image\n",
+    "one_bias = CCDData.read(download_base_url + 'dark-test-0100bias.fit.gz', unit='adu')\n",
+    "one_hundred_bias = CCDData.read(download_base_url + 'master_bias.fit.gz', unit='adu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "fig, (ax_1_bias, ax_avg_bias) = plt.subplots(1, 2, figsize=(30, 15))\n",
     "\n",
-    "The image below is a single bias frame from an [Andor Apogee Aspen CG16M](http://www.andor.com/pdfs/specifications/Apogee_Aspen_CG16M_Specifications.pdf), a low-end 4k × 4k CCD with a [Kodak KAF-16803 sensor chip](http://www.onsemi.com/pub/Collateral/KAF-16803-D.PDF). That model camera has a typical bias level around 1000 and read noise around 10 $e^-$, though the precise value varies from camera to camera and with temperature."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "one_bias = CCDData.read(download_base_url + 'dark-test-0100bias.fit.gz', unit='adu')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "show_image(one_bias, cmap='gray')"
+    "show_image(one_bias.data, cmap='gray', ax=ax_1_bias, fig=fig, input_ratio=8)\n",
+    "ax_1_bias.set_title('Single bias image')\n",
+    "show_image(one_hundred_bias.data, cmap='gray', ax=ax_avg_bias, fig=fig, input_ratio=8)\n",
+    "ax_avg_bias.set_title('100 bias images combined');"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note a few things:\n",
+    "### Note a few things\n",
     "\n",
     "+ The bias level in this specific camera is about 1023 (the mid-range of the colorbar).\n",
-    "+ The image is brighter on the left and right edges. This \"amplifier glow\" is frequently present and caused by the CCD electronics.\n",
+    "+ The image is brighter on the left and right edges. This \"amplifier glow\" is frequently present and caused by the CCD electronics (photosensors with an applied voltage are LEDs).\n",
     "+ There are several vertical lines; these are columns for which the bias level is consistently higher.\n",
     "+ There is noticeable \"static\" in the images; that is read noise.\n",
-    "+ None of the variations are particularly large. "
+    "+ None of the variations are particularly large. \n",
+    "+ Combining several bias images vastly reduces the read noise. This example is a little unrealistic in that 100 bias images were combined but does illustrate the idea that combining images reduces noise."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Impact of combining images on noise\n",
+    "\n",
+    "The reason for taking and combining several calibration images is to reduce the noise if the images used for calibration. The difference between a single image and a combination of images is apparent in the images above. Another way to see the impact of combining images in the histogram of pixel values. Notice that the distribution of values is much narrower for the combined image than for a single bias. Pixels near the edges, where the amplifier glow is large, are binned separately from the rest of the pixels to emphasize the uniformity of the chip away from the glow."
    ]
   },
   {
@@ -87,264 +123,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hist(one_bias.data.flatten(), bins=800)\n",
+    "plt.figure(figsize=(20, 10))\n",
+    "hist(one_bias.data[:, 15:-30].flatten(), bins=800, alpha=0.4, label='One bias', color='deepskyblue')\n",
+    "hist(np.concatenate((one_bias.data[:, :15].flatten(), one_bias.data[:, -30:].flatten())), bins=400, alpha=0.2, label='One bias (edges only)', color='lightskyblue')\n",
+    "#hist(, bins=800, alpha=0.2, label='One bias (edges only)', color='darkblue')\n",
+    "hist(one_hundred_bias.data[:, 15:-30].flatten(), bins=800, alpha=0.4, label='One hundred bias images', color='darkgreen')\n",
+    "hist(np.concatenate((one_hundred_bias.data[:, :15].flatten(), one_hundred_bias.data[:, -30:].flatten())), bins=800, alpha=0.4, label='One hundred bias images (edges only)', color='lightgreen')\n",
+    "\n",
+    "#hist(one_hundred_bias.data[:, :15].flatten(), bins=800, alpha=0.4, label='One hundred bias images', color='darkgreen')\n",
     "\n",
     "plt.grid()\n",
-    "plt.xlim(975, 1150)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "master = CCDData.read(download_base_url + 'master_bias.fit.gz', unit='adu')"
+    "plt.xlim(975, 1400)\n",
+    "plt.legend()\n",
+    "plt.xlabel('Pixel value')\n",
+    "plt.ylabel('Number of pixels')\n",
+    "plt.semilogy();"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 100 bias images combined"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "show_image(master, cmap='gray')"
+    "## Bias calibration  overview"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cross-section \n",
-    "\n",
-    "Discuss edges, sensor glow, overscan."
+    "The progression here is to \"calibrate\" the bias images by subtracting overscan, if desired, trim the overscan from the bias images if it is present, and combine all of the bias images to make a \"combined\" bias (another common term for these images is \"master\" bias and occasionally \"super\" bias). "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20,10))\n",
-    "plt.plot(one_bias.data[1000, :], label='single image')\n",
-    "plt.plot(master.data[1000, :], label='100 combined')\n",
-    "plt.grid()\n",
-    "plt.legend()\n",
-    "# plt.xlim(0, 20)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Pixel histogram\n",
-    "\n",
-    "More combined means narrower distribution (less noise)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hist(one_bias.data.flatten(), bins=800, alpha=0.5, label='One bias image')\n",
-    "hist(master.data.flatten(), bins=800, alpha=0.5, label='100 bias images combined')\n",
-    "plt.semilogy()\n",
-    "plt.grid()\n",
-    "plt.legend()\n",
-    "plt.xlim(900, 1400)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Histogram excluding left/right edges of the sensor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hist(one_bias.data[:, 5:-15].flatten(), bins=4000, alpha=0.5, label='One bias image')\n",
-    "hist(master.data[:, 5:-15].flatten(), bins=4000, alpha=0.5, label='100 bias images combined')\n",
-    "#plt.semilogy()\n",
-    "plt.grid()\n",
-    "plt.legend()\n",
-    "plt.xlim(980, 1060)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ccd_eteq = CCDData.read('python_imred_data/ccd.001.0.fits.gz', unit='count')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "show_image(ccd_eteq)\n",
-    "plt.xlim(2000,2080)\n",
-    "plt.ylim(0,150);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20,10))\n",
-    "plt.plot(ccd_eteq.data[1000, 2040:], label='single image')\n",
-    "plt.grid()\n",
-    "plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ccd_eteq.header"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ccddata_g = CCDData.read('python_imred_data/ccd.037.0.fits.gz', unit='count')\n",
-    "ccddata_g"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "show_image(ccddata_g)\n",
-    "plt.xlim(2000,2080)\n",
-    "plt.ylim(0,150);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ccddata_g.header"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "flat_eteq = CCDData.read('python_imred_data/ccd.014.0.fits.gz', unit='count')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20,10))\n",
-    "# plt.plot(ccddata_g.data[1000, 2040:], label='single image')\n",
-    "# plt.plot(ccddata_g.data[:, 2040:].mean(axis=0), label='single image avg')\n",
-    "# plt.plot(ccd_eteq.data[1000, 2040:], label='bias image')\n",
-    "# plt.plot(ccd_eteq.data[:, 2040:].mean(axis=0), label='bias image avg')\n",
-    "# plt.plot(flat_eteq.data[1000, 2040:], label='flat image')\n",
-    "# plt.plot(flat_eteq.data[:, 2040:].mean(axis=0), label='flat image avg')\n",
-    "plt.plot(ccddata_g.data[1000, :], label='single image')\n",
-    "plt.plot(ccddata_g.data.mean(axis=0), label='single image avg')\n",
-    "plt.plot(ccd_eteq.data[1000, :], label='bias image')\n",
-    "plt.plot(ccd_eteq.data.mean(axis=0), label='bias image avg')\n",
-    "plt.plot(flat_eteq.data[1000, :], label='flat image')\n",
-    "plt.plot(flat_eteq.data.mean(axis=0), label='flat image avg')\n",
-    "plt.grid()\n",
-    "plt.axvline(x=2048, color='black', linewidth=3, linestyle='dashed', label='start of overscan')\n",
-    "plt.legend()\n",
-    "plt.ylim(1000, 2000)\n",
-    "plt.xlim(2040, 2090)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wasp = CCDData.read(download_base_url + 'wasp-10-b-S001-R001-C041-r.fit.gz', unit='adu')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dark1000 = CCDData.read(download_base_url + 'dark-test-0002d1000.fit.gz', unit='adu')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "flat = CCDData.read(download_base_url + 'AutoFlat-PANoRot-r-Bin1-006.fit.gz', unit='adu')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20,10))\n",
-    "plt.plot(wasp.data[1000, :], label='night sky')\n",
-    "plt.plot(wasp.data.mean(axis=0), label='night sky average')\n",
-    "plt.plot(master.data[1000, :], label='100 bias combined')\n",
-    "plt.plot(dark1000.data[1000, :], label='single 1000sec dark')\n",
-    "plt.plot(dark1000.data.mean(axis=0), label='1000sec dark average')\n",
-    "plt.plot(flat.data[1000, :], label='single flat')\n",
-    "plt.plot(flat.data.mean(axis=0), label='flat average')\n",
-    "plt.grid()\n",
-    "plt.axvline(x=4096, color='black', linewidth=3, linestyle='dashed', label='start of overscan')\n",
-    "plt.legend()\n",
-    "plt.xlim(4080, 4110)\n",
-    "plt.ylim(900, 1300)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -363,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
