--- a/notebooks/02.04-Combine-bias-images-to-make-master.ipynb
+++ b/notebooks/02.04-Combine-bias-images-to-make-master.ipynb
@@ -6,9 +6,147 @@
    "source": [
     "# Combine bias images to make master\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The final step is to combine the individual calibrated bias images into a single combined image. That combined image will have less noise than the individual images, minimizing the noise added to the remaining images when the bias is subtracted.\n",
+    "\n",
+    "Regardless of which path you took through the calibration of the biases (with overscan or without) there should be a folder named `reduced` that contains the calibrated bias images. If there is not, please run the previous notebook before continuing with this one."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import os\n",
+    "\n",
+    "from astropy.nddata import CCDData\n",
+    "from astropy.stats import mad_std\n",
+    "\n",
+    "import ccdproc as ccdp\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "from convenience_functions import show_image\n",
+    "\n",
+    "download_base_url = 'http://physics.mnstate.edu/craig/ccd-guide/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calibrated_images = Path('reduced')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reduced_images = ccdp.ImageFileCollection(calibrated_images)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Recommended settings for image combination\n",
+    "\n",
+    "As discussed in the [notebook about combining images](), the recommendation is that you combine by averaging the individual images but sigma clip to remove extreme values. \n",
+    "\n",
+    "[ccdproc]() provides two ways to combine:\n",
+    "\n",
+    "+ An object-oriented interface built around the `Combiner` object, described in the [ccdproc documentation on image combination]().\n",
+    "+ A function called `combine`, which we will use here because the function allows one to specify the maximum amount of memory that should be used during combination. That feature can be essential depending on how many images you need to combine, how big they are, and how much memory your computer has. \n",
+    "\n",
+    "*NOTE: If using a version of ccdproc lower than 2.0 set the memory limit a factor of 2-3 lower than you want the maximum memory consumption to be.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calibrated_biases = reduced_images.files_filtered(imagetyp='bias', include_path=True)\n",
+    "\n",
+    "combined_bias = ccdp.combine(calibrated_biases, output_file=calibrated_images / 'combined_bias.fit.gz',\n",
+    "                             method='average',\n",
+    "                             sigma_clip=True, sigma_clip_low_thresh=5, sigma_clip_high_thresh=5,\n",
+    "                             sigma_clip_func=np.ma.median, signma_clip_dev_func=mad_std,\n",
+    "                             mem_limit=350e6\n",
+    "                            )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Result\n",
+    "\n",
+    "A single calibrated image and the combined image are shown below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(20, 10))\n",
+    "\n",
+    "show_image(CCDData.read(calibrated_biases[0]).data[500:1000, 500:1000], cmap='gray', ax=ax1, fig=fig)\n",
+    "ax1.set_title('Single calibrated bias')\n",
+    "show_image(combined_bias.data[500:1000, 500:1000], cmap='gray', ax=ax2, fig=fig)\n",
+    "ax2.set_title('{} bias images combined'.format(len(calibrated_biases)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
