--- a/notebooks/00.00-Preface.ipynb
+++ b/notebooks/00.00-Preface.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The purpose of this text is to walk through image reduction and photometry using Python, especially astropy and its affiliated packages. It assumes some basic familiarity with astronomical images and with Python. The inspiration for this work is a pair of guides written for IRAF, \"A User's Guide to CCD Redutions with IRAF\" (Massey 1997) and \"A User's Guide to Stellar CCD Photometry with IRAF\" (Massey and Davis 1992).\n",
+    "The purpose of this text is to walk through image reduction and photometry using Python, especially Astropy and its affiliated packages. It assumes some basic familiarity with astronomical images and with Python. The inspiration for this work is a pair of guides written for IRAF, \"A User's Guide to CCD Reductions with IRAF\" (Massey 1997) and \"A User's Guide to Stellar CCD Photometry with IRAF\" (Massey and Davis 1992).\n",
     "\n",
     "The focus is on optical/IR images, not spectra."
    ]
@@ -22,7 +22,7 @@
    "source": [
     "## Software setup\n",
     "\n",
-    "The recommended way to get setup to use this guide is to use the [Anaconda python distribution](https://www.anaconda.com/download/) (or the much smaller [miniconda installer](https://conda.io/miniconda.html)). Once you have that, you can install everything you need with:\n",
+    "The recommended way to get set up to use this guide is to use the [Anaconda Python distribution](https://www.anaconda.com/download/) (or the much smaller [miniconda installer](https://conda.io/miniconda.html)). Once you have that, you can install everything you need with:\n",
     "\n",
     "```\n",
     "conda install -c astropy ccdproc photutils ipywidgets matplotlib\n",
@@ -60,7 +60,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
