edited understanding CCDs

--- a/notebooks/01.00-Understanding-an-astronomical-CCD-image.ipynb
+++ b/notebooks/01.00-Understanding-an-astronomical-CCD-image.ipynb
@@ -11,9 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "An astronomical image like the one shown below is essentually a two-dimensional array of values. In an ideal world, the value in each pixel (a pixel is one element of the array) would be directly proportional to the amount of light that fell on the pixel during the time the camera's shutter was open. \n",
+    "An astronomical image like the one shown below is essentually a two-dimensional array of values. In an ideal world, the value of each pixel (a pixel being one element of the array) would be directly proportional to the amount of light that fell on the pixel during the time the camera's shutter was open. \n",
     "\n",
-    "That is, of course, not the case. A solid understanding of *why* is useful before diving into the details of image reduction."
+    "But the ideal scenario does not in fact hold true. A solid understanding of *why* pixel values are not directly proportional to light is useful before diving into the details of image reduction."
    ]
   },
   {
@@ -27,13 +27,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Counts, photons and electrons\n",
+    "## Counts, photons, and electrons\n",
     "\n",
-    "The number stored in a raw astronomical image straight off a telescope is called an Analog Digital Unit (ADU) or count, because internally the camera converts an analog voltage in each pixel to a numerical count. The counts of interest to an astronomer are the ones generated via the photoelectric effect when a photon hits the detector. The number of photons (or equivalently, electrons) that reached the pixel is related to the counts in the pixel by the gain.\n",
+    "The number stored in a raw astronomical image straight off a telescope is called an Analog Digital Unit (ADU) or count, because internally the camera converts the analog voltage in each pixel to a numerical count. The counts of interest to an astronomer are the ones generated via the photoelectric effect when a photon hits the detector. The number of photons (or equivalently, electrons) that reach the pixel is related to the counts in the pixel by the gain.\n",
     "\n",
-    "The gain is typically provided by the manufacturer of the camera and can be measured in a strightforward way from a combination of bias and flat images (Howell 2002; p. 71)\n",
+    "The gain is typically provided by the manufacturer of the camera and can be measured from a combination of bias and flat images (Howell 2002; p. 71).\n",
     "\n",
-    "**Note well** that trying to convert a raw image count to photons/electrons by multiplying by the gain will not be meaningful because the raw counts include contributions from sources other than light."
+    "**Take note** that trying to convert a raw image count to photons/electrons by multiplying by the gain will not be meaningful because the raw counts include contributions from sources other than light."
    ]
   },
   {
@@ -46,9 +46,9 @@
     "\n",
     "+ An offset voltage called **bias** is applied to the CCD chip to ensure there are no negative counts during readout. There are small variations in the value of the bias across the chip, and there can be small variations in the bias level over time.\n",
     "+ Counts can be generated in a pixel due to thermal motion of electrons in CCD; cooling a CCD reduces, but may not fully eliminate, this **dark current**. In modern CCDs the dark current is often ignorable exept for a small fraction of pixels. Dark current is typically reported in electrons/second/pixel, and depends strongly on temperature.\n",
-    "+ There is **read noise** intrinsic to the electronics of the CCD. It is impossible to eliminate this noise (it is present in every image taken by the camera) but there are approaches to minimizing it. Read noise is typically reported in electrons; it can depend on temperature.\n",
-    "+ Some light received by the telescope is scattered light coming from the night sky. The amount of **sky background** depends on the filter passband, the atmospheric conditions and the local light sources.\n",
-    "+ Though a CCD chip is fairly small, it is not unsual for **cosmic rays** to hit the chip, releasing charge that is then converted to counts.\n",
+    "+ There is **read noise** intrinsic to the electronics of the CCD. It is impossible to eliminate this noise (it's present in every image taken by the camera) but there are approaches to minimizing it. Read noise is typically reported in electrons as it can depend on temperature.\n",
+    "+ Some light received by the telescope is scattered light coming from the night sky. The amount of **sky background** depends on the filter passband, the atmospheric conditions, and the local light sources.\n",
+    "+ Though a CCD chip is fairly small, it's not unsual for **cosmic rays** to hit the chip, releasing charge that is then converted to counts.\n",
     "\n",
     "Whatever remains after taking all of those things away is, in principle, light from astronomical sources.\n",
     "\n",
@@ -59,16 +59,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Your CCD is not perfect\n",
+    "## CCDs are not perfect\n",
     "\n",
-    "There are a number of issues that affect the sensitivity of the CCD to light, some of which can be corrected for, some of which cannot.\n",
+    "There are a number of issues that affect the sensitivity of the CCD to light, some of which can be corrected for and some of which cannot.\n",
     "\n",
     "+ Vignetting, a darkening of the images in the corners, is common and correctable.\n",
     "+ Dust in the optical path, which causes \"donuts\" or \"worms\" on the image, is also common and correctable.\n",
     "+ Variations in the sensitivity of individual pixels are also common and correctable.\n",
     "+ Dead pixels, which are pixels that don't respond to light, cannot be corrected for.\n",
     "\n",
-    "**Flat** corrections attempt to remove many of these effects. The idea is to image something which is uniformly illuminated as a way to measure variations in sensitivity (regardless fo cause) and compensate for them."
+    "**Flat** corrections attempt to remove many of these effects. The idea is to image something which is uniformly illuminated as a way to measure variations in sensitivity (regardless of cause) and compensate for them."
    ]
   },
   {
@@ -97,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
