edited 01.03 construction of an image

--- a/notebooks/01.03-Construction-of-an-artificial-(but-realistic)-image.ipynb
+++ b/notebooks/01.03-Construction-of-an-artificial-(but-realistic)-image.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Construction of an artificial (but realistic) image\n",
     "\n",
-    "Before we move on to looking at a real image, let's spend a few minutes getting comfortable with what each of the sources of counts looks like in an artificial image. The advantage is that we can control how much of each source of counts goes into the image. Looking at extreme examples can help build an understanding of what is going on in your images."
+    "Before we move on to looking at a real image, let's spend a few minutes getting comfortable with what each of the sources of counts look like in an artificial image. The advantage is that we can control how much of each source of counts goes into the image. Looking at extreme examples can help build an understanding of what's going on in your images."
    ]
   },
   {
@@ -15,7 +15,7 @@
    "source": [
     "## Imports\n",
     "\n",
-    "Almost all of the notebooks in this tutorial will start with the import of Python packages needed for that notebook. The lines below set up [matplotlib](https://matplotlib.org/), a widely used plotting package."
+    "Almost all of the notebooks in this tutorial will start with the import of the Python packages needed for that notebook. The lines below set up [matplotlib](https://matplotlib.org/), a widely used plotting package."
    ]
   },
   {
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Python file referenced below, [convenience_functions.py](convenience_functions.py), contains a few functions for convenient display of images in a notebook. Note that by clicking the link in the previous sentence to the file you can read (or edit) it in the browser. You can also read/edit it in your preferred editor, but it is handy to known editing Python files in the Jupyter notebook environment is possible."
+    "The Python file referenced below, [convenience_functions.py](convenience_functions.py), contains a few functions for convenient display of images in a notebook. Note that by clicking the above link you can read (or edit) the file in the browser. You can also read/edit it in your preferred editor, but it's handy to know that editing Python files in the Jupyter notebook environment is possible."
    ]
   },
   {
@@ -90,9 +90,9 @@
    "source": [
     "## Add some read noise\n",
     "\n",
-    "Which each of the things we add we'll write a small function for adding so that it is easier to experiment with different values. Read noise has a Gaussian distribution; the standard deviation of the Gaussian (in counts) is the read noise (in electrons) divided by the gain (in electrons per count). Read noise is almost always given in electrons.\n",
+    "Which each of the things we add, we'll write a small function for adding so that it's easier to experiment with different values. Read noise has a Gaussian distribution; the standard deviation of the Gaussian (in counts) is the read noise (in electrons) divided by the gain (in electrons per count). Read noise is almost always given in electrons.\n",
     "\n",
-    "Note that each time you run this function you will get a different set of pixels so that it behaves like real noise."
+    "Note that each time you run this function you'll get a different set of pixels so that it behaves like real noise."
    ]
   },
   {
@@ -149,17 +149,17 @@
    "source": [
     "##  Bias\n",
     "\n",
-    "Bias is an offset voltage (which translates into some non-zero numnber of counts) added to every pixel in the image to ensure that when voltages are converted to counts there is never a negative count. Note that in the noise image above, some counts are positive and some are negative, as you would expect for a Gaussian distribution centered on zero.\n",
+    "Bias is an offset voltage (which translates into some non-zero number of counts) added to every pixel in the image to ensure that when voltages are converted to counts there is never a negative count. Note that in the noise image above, some counts are positive and some are negative, as you would expect for a Gaussian distribution centered on zero.\n",
     "\n",
-    "The bias value is roughly the same across the CCD chip, though it is not uncommon to have \"bad\" columns in which the bias level is consistently offset from the rest of the chip.\n",
+    "The bias value is roughly the same across the CCD chip, though it's not uncommon to have \"bad\" columns in which the bias level is consistently offset from the rest of the chip.\n",
     "\n",
     "To model a bias image, we create a uniform array and, optionally, add in some \"bad\" columns. The bad columns are exaggeratesd here to ensure they are visible.\n",
     "\n",
-    "The bad columns in a CCD are typically stable over a very long time. A random number generator is used below to pick which columns in our \"CCD\" are bad, but we use a seed to make sure that each time we generate the bias we get the same bad columns (and pixel values within the bad colums).\n",
+    "The bad columns in a CCD are typically stable over a very long time. A random number generator is used below to pick which columns in our CCD are bad, but we'll use a seed to make sure that each time we generate the bias we get the same bad columns (and pixel values within the bad columns).\n",
     "\n",
-    "This stability is what makes it easy to correct for the effect in real images.\n",
+    "This stability is what makes it possible to correct for the effect in real images.\n",
     "\n",
-    "Final, note that the bias doesn't depend on exposure time. That is because a bias exposure is a zero-second exposure in which the camera simply reads the chip out."
+    "Finally, note that the bias doesn't depend on exposure time. That's because a bias exposure is a zero-second exposure in which the camera simply reads the chip out."
    ]
   },
   {
@@ -275,9 +275,9 @@
    "source": [
     "## Dark current\n",
     "\n",
-    "Dark current depends on the temperature of the sensor; the amount of dark counts in an image also depends on the exposure time. Dark current is typically very small (0.1 electrons/pixel/second or less). Dark counts in this function are calculated by multiplying the input dark current by the input exposure time after converting the dark current unit from electrons to counts using the gain.\n",
+    "Dark current depends on the temperature of the sensor. The amount of dark counts in an image also depend on the exposure time. Dark current is typically very small (0.1 electrons/pixel/second or less). Dark counts in this function are calculated by multiplying the input dark current by the input exposure time after converting the dark current unit from electrons to counts using the gain.\n",
     "\n",
-    "A small fraction of pixels are \"hot\": their dark current is much larger than the rest of the pixels. Hot pixels are modeled here by choosing a subset of the pixels to have a dark current 10,000 times larger than the input dark current. That exaggerates the effect to make those pixels more visible.\n",
+    "A small fraction of pixels are \"hot\": their dark current is much larger than the rest of the pixels. Hot pixels are modeled here by choosing a subset of the pixels to have a dark current 10,000 times larger than the input dark current. This exaggerates the effect to make those pixels more visible.\n",
     "\n",
     "The location and current of hot pixels is typically stable over long periods of time, which makes it straightforward to remove their effect from science images by subtracting it out.\n",
     "\n",
@@ -285,7 +285,7 @@
     "\n",
     "The function below simulates dark currrent only, i.e. it does *not* simulate the read noise that is a part of any actual dark frame from a CCD.\n",
     "\n",
-    "Note that the simulation dark image looks noisy even though it doesn't include read noise. That is because the number of electrons generated obey a Poisson distribution."
+    "Note that the simulation dark image looks noisy even though it doesn't include read noise. This is because the number of electrons generated obey a Poisson distribution."
    ]
   },
   {
@@ -411,13 +411,13 @@
    "source": [
     "## Sky background\n",
     "\n",
-    "The amount of sky background depends on the atmospheric conditions (humidity, presence of light clouds, fires upwind from the observatory), the light sources in the sky (the Moon) and light sources in the surrounding area (i.e. cities). It may be uniform across the frame or it may not be, depending on the conditions.\n",
+    "The amount of sky background depends on the atmospheric conditions (humidity, presence of light clouds, fires upwind from the observatory), the light sources in the sky (the Moon) and light sources in the surrounding area (cities). It may be uniform across the frame or it may not be, depending on the conditions.\n",
     "\n",
-    "The function below generates some sky background. Each time you run it you will get slightly different results (even if you keep the desired amount of sky counts the same) because the counts from a light source follow a Poisson distribution.\n",
+    "The function below generates some sky background. Each time you run it you'll get slightly different results (even if you keep the desired amount of sky counts the same) because the counts from a light source follow a Poisson distribution.\n",
     "\n",
-    "The amount of sky background is directly proportional to the exposure time. In the function below, though, you input the desired number of sky counts.\n",
+    "The amount of sky background is directly proportional to the exposure time. In the function below however, you input the desired number of sky counts.\n",
     "\n",
-    "It is not at all unusual to have a gradient in the sky across the image; that effect is not simulated here."
+    "It's not at all unusual to have a gradient in the sky across the image, but that effect is not simulated here."
    ]
   },
   {
@@ -508,13 +508,13 @@
    "source": [
     "### Summary\n",
     "\n",
-    "Note that the central value of the pixels in the \"realistic\" cloud image above, 1130 or so, is the sum of the \n",
+    "Note that the central value of the pixels in the \"realistic\" cloud image above, 1130 or so, is the sum of the: \n",
     "\n",
     "+ bias level (1100 counts)\n",
     "+ dark current (10 counts, which is 0.1 e/sec/pix $\\times$ 100 sec, divided by the gain of 1 e/count)\n",
-    "+ Sky counts (20 counts)\n",
+    "+ sky counts (20 counts)\n",
     "\n",
-    "The distribution of counts around that is determined by the read noise (5 electrons) and the expected width of a Poisson distribution for the sky counts, which is the square root of the number of thosecounts, $\\sqrt{20} \\approx 4.5$. Add those in quadrature and you get about 6.7."
+    "The distribution of counts around that is determined by the read noise (5 electrons) and the expected width of a Poisson distribution for the sky counts, which is the square root of the number of those counts, $\\sqrt{20} \\approx 4.5$. Add those in quadrature and you get about 6.7."
    ]
   },
   {
@@ -523,7 +523,7 @@
    "source": [
     "### Interactive demo\n",
     "\n",
-    "The cell below sets up an interactive demo that lets you change the value of read noise and the other parameters and see the effect that changing them has on the resulting image."
+    "The cell below sets up an interactive demo that lets you change the value of read noise and other parameters to see the effect that changing them has on the resulting image."
    ]
   },
   {
@@ -714,7 +714,7 @@
    "source": [
     "### Discussion\n",
     "\n",
-    "In the image above the single-pixel bright dots are hot pixels; the remaining dots that are larger than a pixel are simulated stars."
+    "In the image above the single-pixel bright dots are hot pixels while the remaining dots that are larger than a pixel are simulated stars."
    ]
   },
   {
@@ -729,7 +729,7 @@
     "\\text{image} = \\text{bias} + \\text{noise} + \\text{dark current} + \\text{sky} + \\text{stars}\n",
     "$$\n",
     "\n",
-    "Extracting the science (i.e. the stars) is in principle just a matter of subtraction:\n",
+    "Extracting the science (i.e. the stars) is in principle a matter of subtraction:\n",
     "\n",
     "$$\n",
     "\\text{stars} =  \\text{image} - \\text{bias} - \\text{noise} - \\text{dark current} - \\text{sky} \n",
@@ -819,7 +819,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
